# routes/api/token.js
@@ -16,7 +16,7 @@ router
         const connection = await req.Database.pool.connect();
         const { rows } = await connection.query(`SELECT * FROM public.APITokens WHERE token = '${token}'`)
         if (rows.length == 0) return res.sendError(2);
-        const { associatedFirebaseUID: firebaseUserID } = rows[0];
+        const { associatedfirebaseuid: firebaseUserID } = rows[0];
         const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${firebaseUserID}'`)
         if (!req.checkPerms(userRows[0].permissions, 'developer', 'createTokens')) {
             connection.release();
@@ -27,14 +27,14 @@ router
         // if (!license) return res.status(400).json({ error: 'No license provided' });
         const { key } = await Cryptolens.Key.CreateKey(process.env.CRYPTOLENS_TOKEN, 21956)
         const generatedToken = TokenManager.generate({ firebaseuid, license: key, username: userRows[0].displayName });
-        await connection.query(`INSERT INTO public.APITokens (token, associatedFirebaseUID, licenseKey) VALUES ('${generatedToken}', '${firebaseuid}', '${key}')`)
+        await connection.query(`INSERT INTO public.APITokens (token, associatedfirebaseuid, licenseKey) VALUES ('${generatedToken}', '${firebaseuid}', '${key}')`)
         await connection.query(`INSERT INTO public.apiUsage (apiToken, totalUses) VALUES ('${generatedToken}', 0)`)
         res.status(201).json({
             token: generatedToken,
             license: key,
         })
         connection.release();
-        // const {associatedFirebaseUID: FirebaseUser} = rows[0];
+        // const {associatedfirebaseuid: FirebaseUser} = rows[0];
         // AdminApp.auth().getUser(FirebaseUser)
     })
     .delete('/delete', async (req, res) => {
@@ -43,7 +43,7 @@ router
         const connection = await req.Database.pool.connect();
         const { rows } = await connection.query(`SELECT * FROM public.APITokens WHERE token = '${token}'`)
         if (rows.length == 0) return res.sendError(2);
-        const { associatedFirebaseUID: firebaseUserID } = rows[0];
+        const { associatedfirebaseuid: firebaseUserID } = rows[0];
         const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${firebaseUserID}'`)
         if (!req.checkPerms(userRows[0].permissions, 'developer', 'deleteTokens')) {
             connection.release();
@@ -65,7 +65,7 @@ router
         const connection = await req.Database.pool.connect();
         const { rows } = await connection.query(`SELECT * FROM public.APITokens WHERE token = '${token}'`)
         if (rows.length == 0) return res.sendError(2);
-        const { associatedFirebaseUID: firebaseUserID } = rows[0];
+        const { associatedfirebaseuid: firebaseUserID } = rows[0];
         const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${firebaseUserID}'`)
         if (!req.checkPerms(userRows[0].permissions, 'developer', 'admin', 'owner')) {
             connection.release();
@@ -74,7 +74,7 @@ router
         const { rows: tokens } = (await connection.query(`SELECT * FROM public.APITokens`))
         const formattedTokens = []
         for (const tokenData of tokens) {
-            const { rows: [user] } = (await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${tokenData.associatedFirebaseUID}' LIMIT 1`))
+            const { rows: [user] } = (await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${tokenData.associatedfirebaseuid}' LIMIT 1`))
             formattedTokens.push({
                 token: tokenData.token,
                 license: tokenData.licenseKey,
@@ -91,14 +91,14 @@ router
         if (req.query.token) {
             const { rows } = await connection.query(`SELECT * FROM public.APITokens WHERE token = '${token}'`)
             if (rows.length == 0) return res.sendError(5)
-            const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${rows[0].associatedFirebaseUID}'`)
+            const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${rows[0].associatedfirebaseuid}'`)
             if (userRows.length == 0) return res.sendError(500); // misc error
             const { permissions } = userRows[0];
             if (!req.checkPerms(permissions, 'developer', 'readTokens')) return res.sendError(12);
             const { token: tokenToLookup } = req.query;
             const { rows: tokenRows } = await connection.query(`SELECT * FROM public.APITokens WHERE token = '${tokenToLookup}'`)
             if (tokenRows.length == 0) return res.sendError(13)
-            const { rows: [user] } = (await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${tokenRows[0].associatedFirebaseUID}' LIMIT 1`))
+            const { rows: [user] } = (await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${tokenRows[0].associatedfirebaseuid}' LIMIT 1`))
             await connection.release();
             return res.status(200).json({
                 token: tokenRows[0].token,
@@ -109,7 +109,7 @@ router
         } else {
             const { rows } = await connection.query(`SELECT * FROM public.APITokens WHERE token = '${token}'`)
             if (rows.length == 0) return res.sendError(5)
-            const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${rows[0].associatedFirebaseUID}'`)
+            const { rows: userRows } = await connection.query(`SELECT * FROM public.users WHERE firebaseuid = '${rows[0].associatedfirebaseuid}'`)
             if (userRows.length == 0) return res.sendError(13);
             await connection.release();
             res.status(200).json({
